--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^6.4.0",
     "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
+    "i18next": "^24.2.1",
     "jsencrypt": "^3.3.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
